# asr_platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  test_import.py  test_preload.py  test_salt_import.py
.github/workflows/: ci-cd.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_complete_research_grade_schema.py  002_users_and_collection_modes.py  003_linguistic_dna_schema.py  004_voice_first_submission_metadata.py  005_merge_submission_and_research_branches.py  006_source_translation_bootstrap.py  007_contributor_submission_workflow.py  008_source_translation_validation_pool.py  6b9d1c3f2a11_shared_image_prompt_pool.py  79a9fa969c13_initial_schema.py  a40fbadecb58_expand_language_iso_code.py
data/: English-Luganda.tsv  recorded - image urls.csv
data/salt/: acholi.csv  ateso.csv  english.csv  luganda.csv  lugbara.csv  lusoga.csv  runyankole.csv  rutooro.csv  swahili.csv
docs/: SCHEMA_DESIGN.md  backlog.md  implementation_strategy.md  mvp_spec.md  production_rollout_plan.md  research_paper.docx.md
scripts/: bootstrap-admin.sh  create_admin.py  download_salt_data.py  start.sh
src/isdr_api/: bootstrap_data.py  database.py  database_config.py  db_models.py  db_models_extended.py  governance_utils.py  language_matching.py  main.py  schemas.py  schemas_extended.py  security.py  (+1 more)
tests/: test_api.py  test_extended_pipeline.py  test_routing.py
ui/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
(+48 files in other folders)
